# src/controllers/auth.js
@@ -12,6 +12,25 @@ const Token = require("../models/token")
 
 module.exports = {
   login: async (req, res) => {
+
+
+    /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Login'
+            #swagger.description = 'Login with username and password'
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    username: '*String',
+                    password: '*String',
+                    email: '*String',
+                }
+            }
+        */
+
+
+
     const { username, password } = req.body;
 
     if (username && password) {
@@ -50,6 +69,15 @@ module.exports = {
   },
 
   logout: async (req, res) => {
+
+
+
+         /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Logout'
+            #swagger.description = 'Delete token.'
+         */
+
     const data = req.user
       ? await Token.deleteOne({ userId: req.user._id })
       : null;
