# src/controllers/department.js
@@ -10,6 +10,20 @@ module.exports = {
 
     list: async (req,res) => {
 
+        /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "List Departments"
+        #swagger.description = `
+            You can send query with endpoint for search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+        */
+
         const result = await res.getModelList(Department)
 
         res.status(200).send({
@@ -20,6 +34,18 @@ module.exports = {
     },
     create: async (req,res) => {
 
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Create Department"
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    $ref: '#/definitions/Department'
+                }
+            }
+        */
+
         const result = await Department.create(req.body)
 
         res.status(201).send({
@@ -28,6 +54,11 @@ module.exports = {
         })
     },
     read: async (req,res) => {
+
+        /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Get Single Department"
+        */
 
         const result = await Department.findById(req.params.id)
         // console.log(result);
@@ -38,6 +69,18 @@ module.exports = {
         })
     },
     update: async (req,res) => {
+
+        /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Update Department"
+        #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                $ref: '#/definitions/Department'
+            }
+        }
+        */
 
         const result = await Department.findByIdAndUpdate(req.params.id, req.body, {new:true})
 
@@ -52,6 +95,11 @@ module.exports = {
     },
     deleteDepartment: async (req,res) => {
 
+        /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Delete Department"
+        */
+
         const result = await Department.deleteOne({_id:req.params.id})
 
         // console.log(result);
@@ -63,6 +111,14 @@ module.exports = {
     },
 
     personnels: async (req,res) =>{
+
+
+        /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Get Personnels of Department"
+        */
+
+
         const Personnel = require("../models/personnel")
         // const result = await Personnel.find({departmentId:req.params.id}).populate("departmentId")
         // awaiti unuttun
