# src/controllers/personnel.js
@@ -9,6 +9,20 @@ module.exports = {
 
     list: async (req,res) => {
 
+        /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "List Personnels"
+        #swagger.description = `
+            You can send query with endpoint for search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+        */
+
         const result = await res.getModelList(Personnel)
 
         res.status(200).send({
@@ -19,6 +33,18 @@ module.exports = {
     },
     create: async (req,res) => {
 
+        /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "Create Personnel"
+        #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                $ref: '#/definitions/Personnel'
+            }
+        }
+        */
+
         const result = await Personnel.create(req.body)
 
         res.status(201).send({
@@ -27,6 +53,11 @@ module.exports = {
         })
     },
     read: async (req,res) => {
+
+        /*
+            #swagger.tags = ["Personnels"]
+            #swagger.summary = "Get Single Personnel"
+        */
 
         const result = await Personnel.findById(req.params.id)
         // console.log(result);
@@ -37,6 +68,18 @@ module.exports = {
         })
     },
     update: async (req,res) => {
+
+        /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "Update Personnel"
+        #swagger.parameters['body'] = {
+            in: 'body',
+            required: true,
+            schema: {
+                $ref: '#/definitions/Personnel'
+            }
+        }
+        */
 
         const result = await Personnel.findByIdAndUpdate(req.params.id, req.body, {new:true})
 
@@ -50,6 +93,11 @@ module.exports = {
         })
     },
     deletePersonnel: async (req,res) => {
+
+        /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "Delete Personnel"
+        */
 
         const result = await Personnel.deleteOne({_id:req.params.id})
 
